tests/fixtures/valid/final_expr_local.torel
unit fixtures.final_expr_local;

export proc main() -> Int32 {
    fix answer: Int32 = 42;
    answer
}
