tests/fixtures/invalid/unreachable_after_continue.torel
unit fixtures.unreachable_after_continue;

export proc main() -> Int32 {
    loop {
        continue;
        fix answer: Int32 = 7;
    }
}
